# ClientGuardian

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: alembic.ini  pyproject.toml
backend/src/: app.py  config.py  loader.py
backend/src/admin/: __init__.py  sqladmin_auth.py  sqladmin_views.py
backend/src/api/: __init__.py  auth.py  tasks.py
backend/src/api/utils/: auth_middleware.py  checked_auth_user.py  errors.py  routers.py
backend/src/database/: crud.py  db_manager.py  init_db.py  models.py
backend/src/database/cruds/: tasks.py  tokens.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 73c90d49faee_init.py  a11fdaee82bf_init.py  e3c4b1de4f80_init.py
backend/src/utils/: dataset_processor.py  loguru_integration.py  oauth2_utils.py
frontend/: package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/svg/: ai_svg.vue  bad_status_svg.vue  busket_svg.vue  download_svg.vue  file_svg.vue  good_status_svg.vue  protection_svg.vue  read_svg.vue  wait_status_svg.vue
frontend/src/components/: DropFile.vue  FileToServer.vue  Task.vue
frontend/src/modules/: api.js
frontend/src/router/: index.js
frontend/src/store/: files.js
frontend/src/views/: AuthToken.vue  MainPage.vue
ml-core/: dataset_processor.py  training.ipynb
ml-training/: training.ipynb
src/ClientGuardian/: ML.ipynb  RZD (3).ipynb  RZD (4).ipynb  RZD.ipynb
