[tool.poetry]
name = "client-guard"
version = "0.1.0"
description = ""
authors = ["DIMFLIX-OFFICIAL <dimflix.official@gmail.com>"]
readme = "README.md"
packages = [
    { include = "ClientGuardian", from = "src" }
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
wheel = "^0.44.0"
setuptools = "^75.2.0"
vaex = "^4.17.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
